# forge

./: .gitignore  CHANGELOG.md  README.md  emporium-providers.example.md  forge.example.md  pyproject.toml
.claude-plugin/: plugin.json
commands/: forge-audit.md  forge-bump.md  forge-doctor.md  forge-new.md  forge-promote.md  forge-readme.md  forge-register.md  forge-status.md  forge-sync.md  forge-verify.md
hooks/: log-activation.sh
skills/forge/: SKILL.md
src/forge/: __main__.py  audit.py  bump.py  cli.py  config.py  doctor.py  promote.py  providers.py  providers_doctor.py  readme.py  readme_verify.py  register.py  registry_io.py  scaffold.py  status.py  sync.py  verify.py
src/forge/rubric_snapshot/: __init__.py
templates/: CHANGELOG.md.j2  README.md.j2  plugin.json.j2
tests/: conftest.py  test_audit.py  test_bump.py  test_cli.py  test_config.py  test_doctor.py  test_integration.py  test_promote.py  test_providers.py  test_readme.py  test_readme_verify.py  test_register.py  test_registry_io.py  test_scaffold.py  test_status.py  test_sync.py  test_templates.py  test_verify.py
tests/fixtures/registries/: emporium-marketplace.json  plugin-meta.json  registry.json  website-marketplace.json
tests/fixtures/sample-plugin/: CHANGELOG.md  README.md
tests/fixtures/sample-plugin/.claude-plugin/: plugin.json
tests/fixtures/sample-plugin/docs/: how-it-works.md  reference.md
tests/fixtures/sample-plugin/skills/sample/: SKILL.md
